<resources>
    <string name="app_name">SHome</string>
    <string name="garage">Garage</string>
    <string name="room">Room</string>
    <string name="music">Music</string>
    <string name="kitchen">Kitchen</string>
    <string name="gate">Gate</string>
    <string name="lights">Lights</string>
    <string name="security">Security</string>
    <string name="curtains">Curtain</string>
    <string name="door_lock">Door</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
</resources>